syntax = "proto3";

package  week4;
option go_package = "api/;user";

service User {
    rpc GetByUserID(UserRequest) returns (UserReply){}
}

message UserRequest {
    int64 id = 1;
}

message UserReply {
    int64 id = 1;
    string name = 2;
}